--- a/jh___.css
+++ b/jh___.css
@@ -1,2 +1,2 @@
-body { font-family: serif; max-width: 500px }
+ p { font-family: serif; max-width: 500px; }
 pre { white-space: pre-wrap !important; }
