--- a/jh___.css
+++ b/jh___.css
@@ -1,2 +1,4 @@
+html { width:750px; margin-left:auto; margin-right:auto; }
 body { font-family: serif; }
-pre { white-space: pre-wrap !important; }
+code,pre { background-color:#D3D3D3; }
+
